# vkdev

./: .gitignore  CMakeLists.txt  dependencies.sh  genie.lua  gmake_gen.sh
include/: UI.h  command_buffer.h  common_def.h  framebuffer.h  functionlist.inl  pipeline_descriptor.h  pipeline_resources.h  renderpass.h  vkbuffer.h  vkdevconfig.h  vkdevconfig.h.in  vkdevice.h  vkfunctions.h  vkhelpers.h  vkinitializer.h  vkinput.h  vkinstance.h  vkinterface.h  vkloader.h  vksurface.h  vkswapchain.h  vktexture.h  window.h
include/commands/: cmd_bindbuffer.h  cmd_binddescriptor.h  cmd_bindindex.h  cmd_bindpipeline.h  cmd_buffercopy.h  cmd_draw.h  cmd_drawUI.h  cmd_drawindexed.h  cmd_renderpass.h  vkclear.h  vkcommand.h
src/: UI.cpp  command_buffer.cpp  framebuffer.cpp  main.cpp  pipeline_descriptor.cpp  pipeline_resources.cpp  renderpass.cpp  vkbuffer.cpp  vkdevice.cpp  vkfunctions.cpp  vkhelpers.cpp  vkinput.cpp  vkinstance.cpp  vkloader.cpp  vksurface.cpp  vkswapchain.cpp  vktexture.cpp  window.cpp
src/commands/: cmd_bindbuffer.cpp  cmd_binddescriptor.cpp  cmd_bindpipeline.cpp  cmd_renderpass.cpp  vkclear.cpp  vkcommand.cpp
src/internal/: internal_resources.cpp  internal_resources.h
src/shaders/: shader_compile.sh
src/shaders/glsl/: test.frag  test.vert  texture_samp.frag
src/shaders/spirv/: stexture_frag.spv  test_frag.spv  test_vert.spv
